[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
select = ["ALL"]
ignore = ["ANN", "INP001"]
unfixable = [
    # Don't remove `print` statements, just warn.
    "T201",
]

[tool.ruff.per-file-ignores]
"./tests/*.py" = ["S101", "PLR2004"]

[tool.ruff.pydocstyle]
convention = "google"
