[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa"
version = "0.0.1"
description = "Data Structures and Algorithms in Python"
dependencies = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-rich",
    "pytest-xdist",
    "sphinx",
    "ruff",
    "pre-commit",
]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
select = ["ALL"]
ignore = ["ANN", "INP001"]
unfixable = [
    # Don't remove `print` statements, just warn.
    "T201",
]

[tool.ruff.per-file-ignores]
"./tests/*.py" = ["S101", "PLR2004"]

[tool.ruff.pydocstyle]
convention = "google"
